<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    android:background="@color/btn_login_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <include layout="@layout/camera_name_list" />


            <EditText
                android:id="@+id/E_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/whiteColor"
                android:textColor="@color/input_login"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/Email_txt_hint"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="5">

                <Button
                    android:id="@+id/Date"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:background="@drawable/mybtn3"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/whiteColor"
                    android:textColorHint="@color/whiteColor"
                    android:hint="@string/date_text_hint"
                    android:inputType="date" />

                <Button
                    android:id="@+id/Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/mybtn3"
                    android:textColor="@color/whiteColor"
                    android:textColorHint="@color/whiteColor"
                    android:hint="@string/time_text_hint"
                    android:inputType="date" />
            </LinearLayout>

            <EditText
                android:id="@+id/Disease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/whiteColor"
                android:textColor="@color/input_login"
                android:hint="@string/Disease_txt_hint"
                android:padding="15dp" />

            <EditText
                android:id="@+id/Medication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/whiteColor"
                android:textColor="@color/input_login"
                android:hint="@string/Medication_txt_hint"
                android:padding="15dp" />

            <EditText
                android:id="@+id/Cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/whiteColor"
                android:textColor="@color/input_login"
                android:ems="10"
                android:hint="@string/Coast_text_hint"
                android:inputType="numberDecimal"
                android:padding="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/call"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/call" />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:id="@+id/save"
                    />

            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>