<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:background="@android:drawable/ic_menu_gallery"
            android:cropToPadding="true"
            android:id="@+id/patient_photo" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:id="@+id/image_Button" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="19dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/input_login"
            android:textStyle="bold"
            android:textSize="25dp"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/app_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/whiteColor"
            android:hint="@string/name_text_hint"
            android:padding="5dp"
            android:textColor="@color/input_login"
            android:layout_marginTop="5dp"
            android:id="@+id/Name"

            android:layout_gravity="right" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/input_login"
            android:background="@color/whiteColor"
            android:inputType="phone"
            android:padding="5dp"
            android:id="@+id/Tel"
            android:hint="@string/tel_text_hint" />

    </LinearLayout>

    </LinearLayout>